# Customer-churn-prediction-ml

./: .gitignore  Makefile  README.md  REPRODUCIBILITY.md  config.yaml  pyproject.toml
benchmarks/: analyze_results.py  apply_indexes.py  explain.py  load_data.py  plot_results.py  reproduce_benchmarks.py  run_all_scales.py  run_benchmarks.py  run_throughput.py
data/raw/: generate_data.py
docs/: feature_spec.md
notebooks/: 01_results_summary.ipynb
sql/: 01_build_base_tables.sql  02_compute_features.sql  drop_indexes.sql  indexes.sql  queries.sql  schema.sql
src/: __init__.py  cli.py
src/api/: README.md  __init__.py  app.py
src/data/: __init__.py  load_raw.py  sql_runner.py
src/evaluation/: __init__.py  analyze_thresholds.py  business_evaluation.py  compare_models.py  error_analysis.py  evaluate_model.py  generate_report.py  metrics.py  run_business_evaluation.py  run_error_analysis.py  thresholds.py
src/features/: __init__.py  compute_features.py  validate_features.py
src/models/: __init__.py  train_baseline.py  train_tree.py  tune.py
src/utils/: __init__.py  config.py  paths.py
tests/: __init__.py  test_metrics.py  test_splits.py
